Fix userlist point bar on mobile

--- a/src/Edukodas/Bundle/TemplateBundle/Resources/public/sass/main.scss
+++ b/src/Edukodas/Bundle/TemplateBundle/Resources/public/sass/main.scss
@@ -294,6 +294,25 @@ div[id^="delete-points-preload-"] .spinner-layer .circle-clipper.right .circle {
   }
 }
 
+.collection .collection-item {
+  .team-name {
+    padding-left: 0;
+  }
+
+  position: relative;
+}
+
+.point-bar {
+  height: 10px;
+
+  @media only screen and (max-width: 992px) {
+    height: 3px;
+    position: absolute;;
+    top: 0;
+    left: 0;
+  }
+}
+
 // Settings
 
 .choose-image {
